kubernetes/gatus/resources/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gatus
  namespace: gatus
  labels:
    app.kubernetes.io/name: gatus
    app.kubernetes.io/instance: gatus
    app.kubernetes.io/part-of: gatus
    app.kubernetes.io/managed-by: argocd
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: gatus
  template:
    metadata:
      labels:
        app.kubernetes.io/name: gatus
        app.kubernetes.io/instance: gatus
        app.kubernetes.io/part-of: gatus
        app.kubernetes.io/managed-by: argocd
    spec:
      tolerations:
        - key: node-role.kubernetes.io/control-plane
          operator: Exists
          effect: NoSchedule
      containers:
        - name: gatus
          image: ghcr.io/twin/gatus:v5.36.0
          ports:
            - name: http
              containerPort: 8080
          readinessProbe:
            httpGet:
              path: /health
              port: http
            periodSeconds: 30
          volumeMounts:
            - name: config
              mountPath: /config/config.yaml
              subPath: config.yaml
              readOnly: true
          resources:
            requests:
              cpu: 50m
              memory: 64Mi
      volumes:
        - name: config
          configMap:
            name: gatus-config
---
apiVersion: v1
kind: Service
metadata:
  name: gatus
  namespace: gatus
  labels:
    app.kubernetes.io/name: gatus
    app.kubernetes.io/instance: gatus
    app.kubernetes.io/part-of: gatus
    app.kubernetes.io/managed-by: argocd
spec:
  selector:
    app.kubernetes.io/name: gatus
  ports:
    - name: http
      port: 8080
      targetPort: http
